# BCMS

./: .gitignore  README.md  ocr_local.py  preprocess_images.py  pyproject.toml  supabase_utils.py  yomitoku.py
deepseek_outputs/d/: deepseek_output.md  easyocr_detections.json
docs/: bcms-requirements-template.md  exhibit-guide.html
outputs_deepseek/d/: easyocr_detections.json
outputs_deepseek/f/: easyocr_detections.json
unwantedFile/: README.md  deep_seak.py
unwantedFile/deepseek_outputs/b/: deepseek_output.md  easyocr_detections.json
unwantedFile/outputs_deepseek/d/: deepseek_output.md
unwantedFile/outputs_deepseek/f/: deepseek_output.md
web/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/cards/[id]/: page.tsx
web/src/app/projects/: DeleteProjectForm.tsx  actions.ts  page.tsx
web/src/app/scan/: page.tsx
web/src/components/: DeleteCardButton.tsx  ReprocessButton.tsx  ScanForm.tsx
web/src/lib/: database.types.ts  resultUtils.ts  supabaseServer.ts
yomitoku_results/: summary.csv  summary.json
yomitoku_results/IMG_4530/: IMG_4530.csv  IMG_4530.html  IMG_4530.json  IMG_4530.md
yomitoku_results/a/: a.csv  a.html  a.json  a.md
yomitoku_results/b/: b.html  b.json  b.md
yomitoku_results/c/: c.csv  c.html  c.json  c.md
yomitoku_results/d/: d.csv  d.html  d.json  d.md
yomitoku_results/e/: e.csv  e.html  e.json  e.md
yomitoku_results/f/: f.csv  f.html  f.json  f.md
yomitoku_results/g/: g.csv  g.html  g.json  g.md
(+4 files in other folders)
